# building-technologies-remote-service-unit-connector

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  thirdpartylicenses.md
docs/: How-to-build.md
openwrt/: feeds.conf  openwrt.config-mips  openwrt.config-x86_64
openwrt/etc/config/: rsu-connector-config.json  telemetry-forwarder-config.json
openwrt/etc/init.d/: rsu_connector  telemetry_forwarder
openwrt/patches/: 0001-spdlog-091de62e83ccbf784f9f51fd9e3d8b71bcf44cbc.patch  0002-spdlog-0f829d02468676326a4a57dc498a7a4129a93fab.patch  0003-spdlog-6b1b036a38a76035500f138426a4b49191fbb3bc.patch  0004-spdlog-59c99a6637a8fee62a02fa21df58b074595edfe5.patch  0005-spdlog-862172a8939dd5f5fcc283ca347da0d65188b6b8.patch  0006-spdlog-537f96d45838fc88cd9a11c4fe38d34eca40607e.patch  0007-spdlog-78e88147fb72a039f24141ee2fc5832ac82a72ce.patch  0008-spdlog-c06938363e73bf5c8dcc9c9e1c633f8aadf95703.patch  0009-spdlog-1692a687fb84ad03d08394e09cb470251f718cb8.patch  0010-spdlog-include-dir.patch  0020-libfmt-f0ca08bec47fc194af906f9b809870055605f95c.patch  0021-libfmt-bfcab07d87bda7d5746c5ef85035fc47af14b09b.patch  0022-libfmt-32c802c91579395be5c271c68b154339637839d5.patch  0023-libfmt-a414b964a386b2866e9044406d4f35ca6d07e9a7.patch  0024-libfmt-6d03acddbd2d8ecd1fb578ccb54292c0033a9cb6.patch  0025-libfmt-b6446c122ebe2cd9fda9dda16030f4feeb26e1e3.patch  0026-libfmt-d29e150f1770513858f5ee970d90507d2ba093b6.patch  0027-libfmt-19a568923d5b8ff466e97aed5ef429bea8291ae7.patch  0028-libfmt-0bf3efb4c9cb0f8e3183a6fbc68cf10614e72cb0.patch  0029-libfmt-8a8bd020e9460f13928ef714da15fe9cb389316a.patch  0030-cpp-base64-add-fPIC.patch-rsu
pnp-schema/: RemoteServiceUnit.json
src/: CMakeLists.txt  build_mips.sh  build_x86.sh
src/cmake/: mips-openwrt-toolchain.cmake  x86_64-openwrt-toolchain.cmake
src/rsu-connector/: .clang-format  CMakeLists.txt
src/rsu-connector/AzureSDKWrapper/: CustomHSM.cpp  CustomHSM.h  IIotHubClient.h  IMessageLifeTimeTracker.h  IProvisioningClient.h  IotHubClientWrapper.cpp  IotHubClientWrapper.h  IotHubFactory.cpp  IotHubFactory.h  MessageCollector.cpp  MessageCollector.h  MethodRouter.cpp  MethodRouter.h  ProvisioningClientWrapper.cpp  ProvisioningClientWrapper.h  ReliableMessageDispatcher.cpp  ReliableMessageDispatcher.h
src/rsu-connector/Commands/: AddPortForwarding.cpp  AddPortForwarding.h  ClearPortForwardings.cpp  ClearPortForwardings.h  ConfigureVPNConnection.cpp  ConfigureVPNConnection.h  GetNetworkDetails.cpp  GetNetworkDetails.h  GetPortForwardings.cpp  GetPortForwardings.h  GetVPNConfigurations.cpp  GetVPNConfigurations.h  ICommand.h  IPortForwardingActor.h  IVPNActor.h  RemovePortForwarding.cpp  RemovePortForwarding.h  RestartConnector.cpp  RestartConnector.h  StartVPNConnection.cpp  StartVPNConnection.h  StopVPNConnection.cpp  StopVPNConnection.h
src/rsu-connector/Configuration/: Configuration.cpp  Configuration.h
src/rsu-connector/DeviceTwin/: DeviceTwin.cpp  DeviceTwin.h  IDeviceInformation.h
src/rsu-connector/HttpHandler/: HttpClient.cpp  HttpClient.h  HttpHandlerFactory.cpp  HttpHandlerFactory.h  HttpServer.cpp  HttpServer.h  IHttpClient.h  IHttpServer.h
src/rsu-connector/JobScheduler/: IJobScheduler.h  JobScheduler.cpp  JobScheduler.h
src/rsu-connector/UBus/: UBus.cpp  UBus.h
src/rsu-connector/common/: DestroyNotification.h  NonCopyable.h
src/rsu-connector/main/: IotHubOrNull.cpp  IotHubOrNull.h  main.cpp  telemetry-main.cpp
src/rsu-connector/unittest/: CommandAddPortForwardingTest.cpp  CommandClearPortForwardingTest.cpp  CommandConfigureVPNConnectionTest.cpp  CommandGetNetworkDetailsTest.cpp  CommandGetPortForwardingsTest.cpp  CommandGetVPNConfigurationsTest.cpp  CommandRemovePortForwardingTest.cpp  CommandRestartConnectorTest.cpp  CommandStartVPNTest.cpp  CommandStopVPNTest.cpp  ConfigurationTest.cpp  CustomHSMTest.cpp  DeviceTwinTest.cpp  HttpHandlerTest.cpp  IotHubOrNullTest.cpp  JobSchedulerTest.cpp  MessageCollectorTest.cpp  MockIotClient.h  MockPortForwardingActor.h  MockVPNActor.h  ReliableMessageDispatcherTest.cpp  UbusTest.cpp  testmain.cpp
src/unittest/: generate_coverage.sh  mock_ip.sh  run_unittest.sh
tools/: README.md  add_header.sh  header.txt
